--- a/history
+++ b/history
@@ -1,3 +1,50 @@
+ls
+cd test
+mkdir test/test
+ls
+clear
+echo "Hello Wordl" | grep "Hello" ; ls ; sef ; echo j'ai
+jh
+l
+zatjrhjeu;echo "Hello Wordl" | grep "Hello" ; ls ; 
+echo "Hello Wordl" | grep "Hello" ; ls ; 
+echo "Hello Wordl" | grep "Hello" ; ls ; sef ;
+echo "Hello Wordl" | grep "Hello" ; ls ; sef ; echo j'ai
+echo "Hello Wordl" | grep "Hello"
+ls
+cat
+cat -e 21sh
+cat 21sh
+ls
+rm file
+ls
+touch file
+ls -l
+ls -la
+pwd
+ls
+pwd
+ls
+ls
+echo "Hello Wordl" | grep "Hello"
+echo "Hello Wordl" | grep "Hello"
+echo "Hello Wordl" | grep "Hello"
+ls | cat -e
+ls
+ls | cat -e
+clear
+ls
+ls
+ls
+clear
+ls
+ls | clear
+clear
+ls
+ls | cat -e
+ls | cat -e ; ls
+ls | cat -e
+ls
 ls -l > file
 ls
 clear
