--- a/history
+++ b/history
@@ -1,3 +1,63 @@
+echo lol | cat -e
+ls | cat -e
+ls | cat -e
+ls
+echo lol | cat -e
+echo lol
+ls | cat -e
+clear
+ls
+setenv lol
+setenv lol
+echo LOL
+clear
+ls
+ls
+echo jai faim
+ls
+clear
+ls
+ls ~
+~/ls
+ls
+ls 
+echo lo
+clear 
+ls
+    
+
+
+echo
+ls | cat -e
+echo lol
+ls
+clear
+echo lol | cat -e
+ks
+echo lol
+ls
+clear
+cleqr
+ls
+we
+clear
+ls
+erg
+erge
+weqferg
+ef
+exit
+env
+setenv lol t
+setenv lolt
+echo "j'ai faim"
+echo 'j'ai faim'
+echo 'j'ai faim
+echo j'ai faim
+echo j'ai faim
+clear
+cleqr
+ls
 ls
 cd test
 mkdir test/test
