--- a/history
+++ b/history
@@ -1,3 +1,193 @@
+env ls
+env -i ls
+ls
+env -i ls
+clear
+ls
+env -i NAME=VALUE
+env -i NAME VALUE
+env -i ls
+env -i
+env
+env -i ls
+env -i ls
+env -i 
+echo "j'ai faim" | rev
+echo "j'ai faim" | rev
+echo "j'ai faim" | rev
+echo "j'ai faim"
+clear
+ls
+ls | cat -e 
+ls
+clear
+qwereg
+qwereg
+echo lol | rev | cat -e | rev 
+echo lol | rev | cat -e | rev 
+ echo lol | rev | cat -e | rev | 
+echo lol | rev | cat -e | rev 
+echo lol | rev | cat -e | rev 
+echo lol | rev | cat -e | rev 
+ echo lol | rev | cat -e | rev | 
+setenv test TAMERemerde;; echo lol | rev | cat -e | rev | 
+setenv test TAMERemerde; env ; echo lol | rev | cat -e | rev | 
+setenv test demerde
+clear
+fsgvbn
+bwrtfdhbwrtgfdhbrsgfvb 
+vrtwfdg
+vwtfdg
+sdfgb
+rwgfb
+gfb
+gbrw
+wrthwr
+eqrg
+fwtr
+qergwe
+
+qwereg
+wef
+echo lol wrqetgqer geqr qfg ergre dgqr eg asdgqre g reg qregq erdgqvreqr gefg 
+echo lolq | rev 
+ls
+ls
+ls
+ls
+ls
+ls | ls | cat -e | rev
+echo lolq | rev 
+echo lolq | rev 
+echo lol
+echo lol
+cat -e | rev
+ ls | cat -e | rev
+ls | ls | cat -e | rev
+ls | ls
+ls
+ ls -R | rev
+ls
+clear
+ls
+ls | ls | ls
+ls | ls
+ls
+ls ; ls | cat -e | rev; ls ;qw erwe
+kwef
+wekijjjjjjjjjjjjjjjjjjjjjjjriejieifjiejfeg nwfbnfbiw jfgiejfgijrigjiegjreigjrigjrigjrijgirjgirjgirjgirjgirjgirjgijrigjirjgirjgijrigjirjgfd;gmk;dsgkfl;wvitr;wbmkfl;sbmktlr;wbmkfdls;mvkfdl;bmktrls;mkfld;sm ,fsbktdls/v,fmdksbl fx,glf/smbkglf gmf, gfmmmnjk;dnbk fdms;;gfsmgfs. gmfs. gfs 
+wergflghuwighwuighwoiuhgtwhgjrtitrjtrphitrowhpjutrwghtuwpghrhputrph rit phrjt iphjrt iphjitrphjitrpohjrtihjtrihptjrhirtpohjtirpohjirtwohpjiwwwwwwwwrt
+echo lol wrqetgqer geqr qfg ergre dgqr eg asdgqre g reg qregq erdgqvreqr gefg 
+echo lol
+env
+clear
+ls
+clear
+ls
+env
+echo weqhufi oqerguiqreg yqerlhg lqer
+echo weqhufi oqerguiqreg yqerlhg lqer
+echo weqhufi oqerguiqreg yqerlhg lqer
+echoweqhufi oqerguiqreg yqerlhg lqer
+clear
+ls
+rm -rf test
+mkdir test
+ls 
+ls
+clear
+clear
+clear
+ls
+cd
+cd test
+cd test/test
+mkdir test test/test
+mkdir test/test
+bc
+cat i
+int i = 0
+
+dh trsgfhsrtgfhstrg fhyfgj bjdy hgbjnfg\n]sf ghbfdg t "tfh ghrt h
+gdfyuer g;; |||||||  dfcgerf gdf ; ;; ;; ; trsgh bhefge qgt erg ;  ;eg ;weg we;fgt f;wgtf ;| fewgt fgw
+qgt erg ;  ;eg ;weg we;fgt f;wgtf ;| fewgt fgw
+qwdger ; ; ; 
+sadfsdafwerfq
+asdf
+sadf
+ls
+s
+sdf
+ls | cat -e; setenv t test ; env
+ls | cat -e; setenv t test ; env
+ls | cat -e; setenv t test ; env
+exit
+make re
+ertyt
+env
+env
+setenv SHE= ==
+env
+setenv SHE= =
+env
+clear
+env
+ls | cat -e; setenv t test ; env
+ls | cat -e; setenv t test ; env
+ls | cat -e
+ls
+env
+setenv t test
+env
+setenv t test
+ls -R | cat -e 
+ls -R | cat -e | rev
+ls -R | cat -e 
+ls -R
+ls
+ls ; ls
+ls
+clear
+ls ; ls ; ;; ls
+ls ; ls 
+ls
+echo lol | cat -e 
+echo lol | cat -e 
+echo lol | cat -e 
+echo lol | cat -e ; ls | cat -e | rev
+echo lol | cat -e ; ls | cat -e | rev
+echo lol | cat -e 
+ls
+clear
+grep "ether"
+grep ./ "ether"
+find ./ | rev
+echo lol | echo lc | cat -e Makefile
+echo lol; echo lc
+echo lol | echo lc
+echo lol | echo lol
+kill -11
+kill -11
+cat -e | l
+cat -e || l
+echo lol | cat -e
+echo lol\\n mdr | cat -e
+echo "\n\n" lol mdr | cat -e
+echo lol\\n mdr | cat -e
+echo lol\n mdr | cat -e
+echo lol mdr | cat -e
+echo lol | cat -e
+echo lol | cat -e
+ls
+clear
+ewqf
+clear
+ls |cat -e ; echo mdr ; env
+ls |cat -e ; echo mdr | cat -e
+ls |cat -e ; echo mdr
+ls |cat -e
+clear
+ls
 echo lol | cat -e
 ls | cat -e
 ls | cat -e
