--- a/history
+++ b/history
@@ -1,375 +1,290 @@
-env ls
-env -i ls
-ls
-env -i ls
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+[1;32m21sh[00m:[[01;34m[04m/Users/ptruffau/21sh[00m]
+7lsls > filels> filels
 clear
 ls
-env -i NAME=VALUE
-env -i NAME VALUE
-env -i ls
-env -i
-env
-env -i ls
-env -i ls
-env -i 
-echo "j'ai faim" | rev
-echo "j'ai faim" | rev
-echo "j'ai faim" | rev
-echo "j'ai faim"
-clear
+ls > file
 ls
-ls | cat -e 
+ls > file
 ls
-clear
-qwereg
-qwereg
-echo lol | rev | cat -e | rev 
-echo lol | rev | cat -e | rev 
- echo lol | rev | cat -e | rev | 
-echo lol | rev | cat -e | rev 
-echo lol | rev | cat -e | rev 
-echo lol | rev | cat -e | rev 
- echo lol | rev | cat -e | rev | 
-setenv test TAMERemerde;; echo lol | rev | cat -e | rev | 
-setenv test TAMERemerde; env ; echo lol | rev | cat -e | rev | 
-setenv test demerde
-clear
-fsgvbn
-bwrtfdhbwrtgfdhbrsgfvb 
-vrtwfdg
-vwtfdg
-sdfgb
-rwgfb
-gfb
-gbrw
-wrthwr
-eqrg
-fwtr
-qergwe
-
-qwereg
-wef
-echo lol wrqetgqer geqr qfg ergre dgqr eg asdgqre g reg qregq erdgqvreqr gefg 
-echo lolq | rev 
+ls > file
 ls
+ls > file
 ls
+ls > file
 ls
+ls | rev
 ls
+ls | rev
 ls
-ls | ls | cat -e | rev
-echo lolq | rev 
-echo lolq | rev 
-echo lol
-echo lol
-cat -e | rev
- ls | cat -e | rev
-ls | ls | cat -e | rev
-ls | ls
-ls
- ls -R | rev
-ls
-clear
-ls
-ls | ls | ls
-ls | ls
-ls
-ls ; ls | cat -e | rev; ls ;qw erwe
-kwef
-wekijjjjjjjjjjjjjjjjjjjjjjjriejieifjiejfeg nwfbnfbiw jfgiejfgijrigjiegjreigjrigjrigjrijgirjgirjgirjgirjgirjgirjgijrigjirjgirjgijrigjirjgfd;gmk;dsgkfl;wvitr;wbmkfl;sbmktlr;wbmkfdls;mvkfdl;bmktrls;mkfld;sm ,fsbktdls/v,fmdksbl fx,glf/smbkglf gmf, gfmmmnjk;dnbk fdms;;gfsmgfs. gmfs. gfs 
-wergflghuwighwuighwoiuhgtwhgjrtitrjtrphitrowhpjutrwghtuwpghrhputrph rit phrjt iphjrt iphjitrphjitrpohjrtihjtrihptjrhirtpohjtirpohjirtwohpjiwwwwwwwwrt
-echo lol wrqetgqer geqr qfg ergre dgqr eg asdgqre g reg qregq erdgqvreqr gefg 
-echo lol
-env
-clear
-ls
-clear
-ls
-env
-echo weqhufi oqerguiqreg yqerlhg lqer
-echo weqhufi oqerguiqreg yqerlhg lqer
-echo weqhufi oqerguiqreg yqerlhg lqer
-echoweqhufi oqerguiqreg yqerlhg lqer
-clear
-ls
-rm -rf test
-mkdir test
+ls > file
+ls > file
+ls > file
 ls 
-ls
-clear
-clear
-clear
-ls
-cd
-cd test
-cd test/test
-mkdir test test/test
-mkdir test/test
-bc
-cat i
-int i = 0
-
-dh trsgfhsrtgfhstrg fhyfgj bjdy hgbjnfg\n]sf ghbfdg t "tfh ghrt h
-gdfyuer g;; |||||||  dfcgerf gdf ; ;; ;; ; trsgh bhefge qgt erg ;  ;eg ;weg we;fgt f;wgtf ;| fewgt fgw
-qgt erg ;  ;eg ;weg we;fgt f;wgtf ;| fewgt fgw
-qwdger ; ; ; 
-sadfsdafwerfq
-asdf
-sadf
-ls
-s
-sdf
-ls | cat -e; setenv t test ; env
-ls | cat -e; setenv t test ; env
-ls | cat -e; setenv t test ; env
-exit
-make re
-ertyt
-env
-env
-setenv SHE= ==
-env
-setenv SHE= =
-env
-clear
-env
-ls | cat -e; setenv t test ; env
-ls | cat -e; setenv t test ; env
-ls | cat -e
-ls
-env
-setenv t test
-env
-setenv t test
-ls -R | cat -e 
-ls -R | cat -e | rev
-ls -R | cat -e 
-ls -R
-ls
-ls ; ls
-ls
-clear
-ls ; ls ; ;; ls
-ls ; ls 
-ls
-echo lol | cat -e 
-echo lol | cat -e 
-echo lol | cat -e 
-echo lol | cat -e ; ls | cat -e | rev
-echo lol | cat -e ; ls | cat -e | rev
-echo lol | cat -e 
-ls
-clear
-grep "ether"
-grep ./ "ether"
-find ./ | rev
-echo lol | echo lc | cat -e Makefile
-echo lol; echo lc
-echo lol | echo lc
-echo lol | echo lol
-kill -11
-kill -11
-cat -e | l
-cat -e || l
-echo lol | cat -e
-echo lol\\n mdr | cat -e
-echo "\n\n" lol mdr | cat -e
-echo lol\\n mdr | cat -e
-echo lol\n mdr | cat -e
-echo lol mdr | cat -e
-echo lol | cat -e
-echo lol | cat -e
-ls
-clear
-ewqf
-clear
-ls |cat -e ; echo mdr ; env
-ls |cat -e ; echo mdr | cat -e
-ls |cat -e ; echo mdr
-ls |cat -e
-clear
-ls
-echo lol | cat -e
-ls | cat -e
-ls | cat -e
-ls
-echo lol | cat -e
-echo lol
-ls | cat -e
-clear
-ls
-setenv lol
-setenv lol
-echo LOL
-clear
-ls
-ls
-echo jai faim
-ls
-clear
-ls
-ls ~
-~/ls
-ls
-ls 
-echo lo
-clear 
-ls
-    
-
-
-echo
-ls | cat -e
-echo lol
-ls
-clear
-echo lol | cat -e
-ks
-echo lol
-ls
-clear
-cleqr
-ls
-we
-clear
-ls
-erg
-erge
-weqferg
-ef
-exit
-env
-setenv lol t
-setenv lolt
-echo "j'ai faim"
-echo 'j'ai faim'
-echo 'j'ai faim
-echo j'ai faim
-echo j'ai faim
-clear
-cleqr
-ls
-ls
-cd test
-mkdir test/test
-ls
-clear
-echo "Hello Wordl" | grep "Hello" ; ls ; sef ; echo j'ai
-jh
-l
-zatjrhjeu;echo "Hello Wordl" | grep "Hello" ; ls ; 
-echo "Hello Wordl" | grep "Hello" ; ls ; 
-echo "Hello Wordl" | grep "Hello" ; ls ; sef ;
-echo "Hello Wordl" | grep "Hello" ; ls ; sef ; echo j'ai
-echo "Hello Wordl" | grep "Hello"
-ls
-cat
-cat -e 21sh
-cat 21sh
-ls
-rm file
-ls
-touch file
-ls -l
-ls -la
-pwd
-ls
-pwd
-ls
-ls
-echo "Hello Wordl" | grep "Hello"
-echo "Hello Wordl" | grep "Hello"
-echo "Hello Wordl" | grep "Hello"
-ls | cat -e
-ls
-ls | cat -e
-clear
-ls
-ls
-ls
-clear
-ls
-ls | clear
-clear
-ls
-ls | cat -e
-ls | cat -e ; ls
-ls | cat -e
+ls > file
+ls > file
 ls
 ls -l > file
+echo mdr >> file
 ls
-clear
-ls
-ls > file | clear ; echo lol | cat -e > file
+ls . file
 ls > file
-clear ; ls
+ls
+ls > file
+
+
+ls > file
+ls
+ls
+ls > file
+ls
+ls
+ls > file
+
+ls
+ls > file
+
+
+
+ls
+ls > file
+ls
+ls > file
+ls > file
+8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file88
+8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file88
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+cat file
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls -l > file
+
+
+
+ls
+ls > file
+
+e
+
+
+ls
+ls > file
+
+
+
+
+
+
+ls
+ls > file
+
+ls
+ls >file
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls > file
+
+
+
+ls > file
+
+
+
+ls > file
+ls
+ls > file
+ls > file
+
+
+echo lol > file
+
+
+
+ls > file
+
+
+
+
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls > file
+ls > file
+ls -la > file
+ls > file
+
+
+
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls > file
+ls > file
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls > file
+
+
+
+
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls > file
+els
+
+
+sl
+ls
+cleafr
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls . file
+ls > f
+
+
+
+ls
+ls
+ls
+ls
+ls
+ls
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls
+ls > f
+ls
+
+
+ls > f
+
+
+
+ls
+ls > f
+
+
+
+ls
+ls > file
+
+ls > file
+
+
+ls
+
+
+
+
+ls > file
+ls
+ls > file
+
+
+
+l
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls > file
+ls
+ls . f
+clear
+ls > f
+clear
+ls | rev | cat -e
+
+
+
+
+
+clear
+ls
+clear
+ls
 clear
 ls
 ls
-ls -R -a auteur
-ls -R -a auteur
-ls -R -a auteur
-ls -R -a auteur
-ls -R -a auteur
-ls -R -a auteur
-ls -l
-ls -l -a
-ls -l
-ls -l
+ls > f
+
+LS > FILE
+
+ls > file
 ls
-ls -l
-clear
-ls
-ls -l
-ls
-ls -l
-ls
-ls -l
-ls -l
-ll
-ls
-ls -l
-ls
-ls -l
-ls
-ls -l
-ls
-ls -l
-ls -l
-ls auteur -l
-ls -a -R
-ls -a
-ls -a auteur
-ls -a
-ls -a
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
-ls
+ls > f
+
+
+
+
+
+
+
+LS
+LS
 ls
 clear
-clear
-l$
-ls
-ls
-ls
-s
-ls
-ls
-ls
 ls
 clear
+CLEAR
+LS
+ECHO
+ECHO LOL
+ECO LOL
+ls
+cleear
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
 clear
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls > file
+ls > filw
+ls
+ls > file
+ls
+ls > file
+ls
+ls > file
+ls . file
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls > file
+ls > file
+ls > file
+\[1;32m21sh[00m:[[01;34m[04m/Users/ptruffau/21sh[00m]
+[1;32m21sh[00m:[[01;34m[04m/Users/ptruffau/21sh[00m]
 ls
 ls
-EOF
-auteur
-ls << EOF
-ls << 
+ls
+ls | rev
+88[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls | cat -e
+ls
+ls
+ls > file
+ls > file
+ls
+ls
+ls
+ls
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
 clear
+ls
+8[M8[M8[M8[Mls888[M8[Mclear888[M8[Mls888[M8[Mls > file8888
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls
+ls > file
+ls
+cd
+ls
+ls
+ls
+ls > file
+ls > file
+echo lol > file
+cat file
