--- a/history
+++ b/history
@@ -1,3 +1,215 @@
+make save
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev
+ls | rev 
+ls
+s
+s
+echo $PATH
+ls ; echo lol
+ls
+ls | rev
+ls
+ls | rev
+ls
+ls
+ls
+ls
+rev
+ls | rev
+ls | rev
+setenv test merde ; env | grep test
+setenv test merde ; env
+env
+setenv test lol
+echo lol
+ls | rev
+ls
+
+
+
+
+
+
+ls | rev
+ls
+l
+ls | rev
+ls
+ls | rev
+ls
+s
+lsl
+
+
+
+ls | rev
+ls
+ls | rev
+ls | rev
+ls
+ls | rev
+ls
+ls | rev
+ls
+ls | rev | rev
+ls
+ls | rev
+ls
+ls | rev
+ls
+ls | rev
+ls
+ls | rev
+ls | rev
+ls
+ls | rev
+ls | rev
+ls -l
+ls
+ls ; echo lol | rev
+ls ; echo lol
+ls
+ls
+ls > file ; cat file ; rm -rf file
+ls ; ls
+ls ;; ls
+ls ;;
+ls ;|;
+ls ;|
+ls ;;
+ls ;
+ls ;;
+ls ;;;;;;;;; ls
+;;;;;;;
+ls | rev
+ls
+ls | rev
+ls -l -a
+ls
+ls | rev | rev | cat -e
+ls | rev
+ls | rev
+ls | rev
+ls
+ls
+ls | rev
+ls -l
+ls
+ls -l | rev
+ls -l
+ls
+ls | rev
+ls
+ls | rev
+ls
+rm -rf fie
+ls
+;s
+ls > file ; cat file; rm -rf file 
+ls ; ls
+ls
+ls | rev
+ls
+ls |rev
+ls | rev
+ls
+clear
+ls | rev
+ls ; echo lol
+ls
+ls | rev
+ls |rev
+ls
+ls | rev
+ls
+ls | rev
+ls
+cat fie
+ls > fie
+ls
+ls
+ls
+ls | cat -e
+ls ; echo lol
+ls
+ls ; echo lol
+ls
+ls
+ls | cat -e
+ls
+clear
+ls
+l
+ls
+ls
+ls ; echo lol
+ls -l
+ls
+ls
+ls
+ls
+ls
+ls
+mkdir t
+ls
+ls
+ls
+echo lol
+ls
+ld
+ls
+ls
+ls
+ls
+
+
+echo lol | cat -e
+echo lol
+ls | cat -e
+ls
+ls | cat -e
+ls | cat -e
+ls | cat -e
+ls | cate -e
+ls |cat -e
+lala
+
+ss
+s
+ls | cat -e
+ls | cat -e
+cat-e
+cat-e
+ls | cat-e
+ls | cat -e
+ls |cat-e
+ls
+ls | cat -e
+ls | cat-e
+ls | cat-e
+ls
+ls | cat -e
+ls
+ls | cat -e
+ls | cat -e
+ls | cat -e
+cat file
+ls > file
+ls
 slll
 ls | rev
 cat file
