--- a/history
+++ b/history
@@ -1,3 +1,33 @@
+exit
+ls evv 2>&1 | rev |cat -e
+cd 
+cd
+ls wcv 2>&1 | rev
+ls wcv 2>&1 
+ls wdv
+ls
+make exe
+make exe
+make exe
+make exe
+ls
+clear
+env | grep 'OLD'
+ls
+rm -rf file
+ls
+clear
+clear\
+ls | rev ; echo lol > file
+ls
+oqwrmopqw " 
+ls | revls | rev |ls | rev | ls | rev
+ls | rev |ls | rev | ls | rev
+ls | rev | ls | rev
+ls | rev | ls
+ls | rev | ls | rev | ls | rev | ls
+ls wefvewfvefvre fv re  2>&1 | rev
+ls | rev | cat -e
 ls | rev |  cat -e
 ls | rev
 ls
